2013-02-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/scaffold.c (_AVC_P): Fix comparison with variation.
	* tests/test-logd: Fix expected values.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/llquantumd128.c: New file: llquantumd128
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/llquantumd32.c: New file: llquantumd64
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/llquantumd64.c: New file: llquantumd32
	optimized implementation for PowerPC.

2013-02-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (llquantumd32): Add prototype.
	(__llquantumd32): Likewise.
	(llquantumd64): Likewise.
	(__llquantumd64): Likewise.
	(llquantumd128): Likewise.
	(__llquantumd128): Likewise.
	* ieee754r/Makefile: Add llquantumd[32|64|128] objects.
	* ieee754r/Versions (LIBDFP_1.0.9): Add llquantum symbols.
	* ieee754r/llquantumd128.c: New file llquantumd128 software
	implementation.
	* ieee754r/llquantumd64.c: New file llquantumd64 software
	implementation.
	* ieee754r/llquantumd32.c: New file llquantumd32 software
	implementation.
	* tests/test-llquantum.c: New file: testcases for llquantumd[32|64|128]
	implementation.
	* Makefile.in: Add test-llquantum.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/quantumd128.c: New file: quantumd128
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/quantumd32.c: New file: quantumd64
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/quantumd64.c: New file: quantumd32
	optimized implementation for PowerPC.

2013-02-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (quantumd32): Add prototype.
	(__quantumd32): Likewise.
	(quantumd64): Likewise.
	(__quantumd64): Likewise.
	(quantumd128): Likewise.
	(__quantumd128): Likewise.
	* ieee754r/Makefile: Add quantumd[32|64|128] objects.
	* ieee754r/Versions (LIBDFP_1.0.9): Add quantum symbols.